# gemini

./: .gitignore  .travis.yml  Cargo.toml  Config.toml  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  aliases.js  index.html  package-lock.json  package.json  search-index.js  tsconfig.json
backend/: Cargo.toml
backend/domain/: Cargo.toml
backend/domain/src/: config.rs  entities.rs  game.rs  lib.rs  resources.rs  simulator.rs  utils.rs
backend/domain/src/economy/: market.rs  mod.rs
backend/domain/src/generators/: names.rs  planets.rs  sectors.rs
backend/tauri/: Cargo.toml  tauri.conf.json
core/: Cargo.toml  tauri.conf.json
core/economy/: agent.rs  market.rs  mod.rs
core/generators/: planets.rs  sectors.rs  systems.rs
core/res/: astronomical_names.json
core/src/: game.rs  resources.rs  simulator.rs
core/utils/: elite.txt  eso.txt  greek.txt  russian.txt  sw.txt
gemini/: all.html  fn.main.html  fn.setup_logger.html  index.html  setup_logger.v.html  sidebar-items.js
gemini/astronomicals/: index.html  sidebar-items.js
gemini/economy/: AskBuilder.t.html  Bid.t.html  BidBuilder.t.html  Commodity.t.html  Economy.t.html  _IMPL_DESERIALIZE_FOR_Commodity.v.html  _IMPL_DESERIALIZE_FOR_Economy.v.html  _IMPL_SERIALIZE_FOR_Commodity.v.html  _IMPL_SERIALIZE_FOR_Economy.v.html  constant._IMPL_DESERIALIZE_FOR_Commodity.html  constant._IMPL_DESERIALIZE_FOR_Economy.html  constant._IMPL_SERIALIZE_FOR_Commodity.html  constant._IMPL_SERIALIZE_FOR_Economy.html  enum.Commodity.html  index.html  sidebar-items.js  struct.Ask.html  struct.AskBuilder.html  struct.Bid.html  struct.BidBuilder.html  struct.Economy.html
gemini/entities/: Faction.t.html  _IMPL_DESERIALIZE_FOR_Faction.v.html  _IMPL_SERIALIZE_FOR_Faction.v.html  constant._IMPL_DESERIALIZE_FOR_Faction.html  constant._IMPL_SERIALIZE_FOR_Faction.html  enum.Faction.html  index.html  sidebar-items.js
gemini/event/: EventHandler.t.html  HANDLER.t.html  HANDLER.v.html  add_keyboard_handler.v.html  add_player_handler.v.html  add_update_handler.v.html  enum.Event.html  fn.add_keyboard_handler.html  fn.add_player_handler.html  fn.add_update_handler.html  index.html  sidebar-items.js  static.HANDLER.html  struct.EventHandler.html  struct.HANDLER.html
gemini/game/: SAVE_PATH.v.html  Updatable.t.html  constant.SAVE_PATH.html  index.html  sidebar-items.js  struct.Game.html  trait.Updatable.html
gemini/game_config/: GameConfig.t.html  PREFS_PATH.v.html  _IMPL_DESERIALIZE_FOR_GameConfig.v.html  _IMPL_SERIALIZE_FOR_GameConfig.v.html  constant.PREFS_PATH.html  constant._IMPL_DESERIALIZE_FOR_GameConfig.html  constant._IMPL_SERIALIZE_FOR_GameConfig.html  index.html  sidebar-items.js  struct.GameConfig.html
gemini/generators/: fn.generate_galaxy.html  generate_galaxy.v.html  index.html  sidebar-items.js
gemini/gui/: GUIEvent.t.html  Gui.t.html  enum.GUIEvent.html  index.html  sidebar-items.js  struct.Gui.html
gemini/player/: PlayerState.t.html  index.html  (+11 more)
res/: astronomical_names.json  economic_agents.json  mission_dialog.json  schematics.json  ships.json  star_types.json  title.txt
src/: astronomicals.rs  config.rs  data.rs  entities.rs  event.rs  game.rs  game_config.rs  main.rs  player.rs  resources.rs  simulator.rs  utils.rs
utils/: french.txt  names.py  sw2.txt
(+408 files in other folders)
