[package]
name = "gemini"
version = "0.1.0"
authors = ["holmgr <viktor.holmgren@gmail.com>"]

[dependencies]
preferences = "^1.1.0"
notify = "4.0.0"
serde = "^0.9.6"
app_dirs = "^1.1.1"
serde_json = "^0.9.5"
serde_derive = "^0.9.6"
rand = "0.3.16"
petgraph = "0.4.8"
rayon = "0.9.0"
log = "0.3"
env_logger = "0.3"
nalgebra = "0.13.1"
statrs = "0.9.0"
lazy_static = "1.0"
