[package]
name = "gemini"
version = "0.1.0"
authors = ["holmgr <viktor.holmgren@gmail.com>"]

[dependencies]
notify = "4.0.0"
serde = "^1.0"
app_dirs = "^1.2.1"
serde_json = "^1.0"
serde_derive = "^1.0"
rand = "^0.4"
petgraph = "0.4.8"
rayon = "0.9.0"
log = "0.3"
env_logger = "0.3"
nalgebra = { version = "^0.14", features = ["serde-serialize"] }
statrs = "0.9.0"
lazy_static = "1.0"
derive_builder = "0.5.1"
tui = "0.2.0"
termion = "1.5.1"
Inflector = "^0.11"
toml = "0.4.5"
spade = { version = "1.4.0", features = ["serde_serialize"] }
textwrap = { version = "0.9", features = ["hyphenation"] }
bincode = "1.0.0"
