[package]
name = "gemini"
version = "0.1.0"
authors = ["holmgr <viktor.holmgren@gmail.com>"]
edition ="2021"
default-run = "gemini"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["api-all"] }
serde_json = "^1.0"
rand = "^0.4"
rayon = "0.9.0"
log = "0.4"
statrs = "0.9.0"
lazy_static = "1.0"
derive_builder = "0.5.1"
Inflector = "^0.11"
toml = "0.4.5"
spade = { version = "1.4.0", features = ["serde_serialize"] }
chrono = { version = "0.4", features = ["serde"] }
fern = "0.5"
clap = "3.0.0-beta.4"
anyhow = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
