[package]
name = "domain"
version = "0.1.0"
authors = ["holmgr <viktor.holmgren@gmail.com>"]
edition = "2021"

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
rand = "^0.4"
rayon = "0.9.0"
log = "0.4"
statrs = "0.9.0"
lazy_static = "1.0"
derive_builder = "0.5.1"
Inflector = "^0.11"
toml = "0.4.5"
spade = { version = "1.4.0", features = ["serde_serialize"] }
chrono = { version = "0.4", features = ["serde"] }
fern = "0.5"
clap = "3.0.0-beta.4"
anyhow = "1.0"
